<resources>
    <string name="app_name">My Application</string>
    <string name="textview">TextView</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="basic">Basic</string>
    <string name="intermediate">Intermediate</string>
    <string name="advance">Advance</string>
    <string name="button">Button</string>
    <string name="help">Help</string>
    <string name="name">Name</string>
</resources>